feat: remove validator that prevents user from updating attestation cr
OCD-3847